Change style for post

--- a/_includes/post.njk
+++ b/_includes/post.njk
@@ -10,7 +10,7 @@ layout: layouts/base.njk
   </h1>
   <div class="pt-11 flex">
     <div class="order-2 w-3/4 divide-y">
-      <div class="pb-6">
+      <div class="main pb-6">
         {{ content | safe }}
       </div>
       {%- if links %}
