--- a/404.njk
+++ b/404.njk
@@ -4,10 +4,10 @@ permalink: 404.html
 eleventyExcludeFromCollections: true
 ---
 <article>
-  <h1 class="pb-8 text-4xl font-extrabold leading-normal text-center border-b">
+  <h1 class="pb-8 text-2xl md:text-3xl lg:text-4xl font-extrabold leading-normal text-center border-b">
     Страница не найдена
   </h1>
-  <div class="pt-11">
+  <div class="pt-6 lg:pt-11">
     <p>
       К сожалению, указанная страница не существует. Если Вы перешли по ссылке, то можете обратиться к
       администратору ресурса-источника.
