--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -13,14 +13,15 @@
   <link rel="alternate" href="{{ metadata.feed.path | url }}" type="application/atom+xml" title="{{ metadata.title }}">
   <link rel="alternate" href="{{ metadata.jsonfeed.path | url }}" type="application/json" title="{{ metadata.title }}">
 </head>
-<body class="font-sans antialiased font-normal leading-8 text-gray-700 bg-white">
-<div class="max-w-5xl mx-auto flex flex-col justify-between h-screen">
+<body class="font-sans antialiased font-normal leading-6 md:leading-7 lg:leading-8 text-gray-700 bg-white">
+<div
+    class="sm:max-w-xl md:max-w-2xl lg:max-w-4xl xl:max-w-5xl mx-auto px-6 sm:px-0 flex flex-col justify-between h-screen">
   <header class="py-7 flex justify-between items-center">
     <div class="flex">
       <img class="mr-3 w-8 h-8 text-primary-500" src="/img/logo.svg">
       <a class="text-2xl font-bold text-gray-700" href="{{ '/' | url }}">{{ metadata.title }}</a>
     </div>
-    <nav class="text-lg font-medium">
+    <nav class="hidden sm:block text-lg font-medium">
       <ul class="flex">
         {%- for entry in collections.all | eleventyNavigation %}
           <li>
@@ -32,12 +33,44 @@
         </li>
       </ul>
     </nav>
+    <div class="sm:hidden">
+      <button id="openMenu" type="button" class="w-8 h-8 ml-1 mr-1 rounded">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
+             class="text-gray-900 dark:text-gray-100">
+          <path fill-rule="evenodd"
+                d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+                clip-rule="evenodd"></path>
+        </svg>
+      </button>
+      <button id="closeMenu" type="button" class="w-8 h-8 ml-1 mr-1 rounded hidden">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
+             class="text-gray-900 dark:text-gray-100">
+          <path
+              fillRule="evenodd"
+              d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+              clipRule="evenodd"
+          />
+        </svg>
+      </button>
+      <div id="mobileMenu" class="fixed w-full h-full top-24 right-0 bg-gray-200 dark:bg-gray-800 opacity-95 z-10 transform ease-in-out duration-300 translate-x-full">
+        <ul class="fixed h-full mt-8">
+          {%- for entry in collections.all | eleventyNavigation %}
+            <li class="px-12 py-4">
+              <a class="text-2xl font-bold text-gray-700" href="{{ entry.url | url }}">{{ entry.title }}</a>
+            </li>
+          {%- endfor %}
+          <li class="px-12 py-4">
+            <a class="text-2xl font-bold text-gray-700" href="https://wirgen.by" target="_blank">О себе</a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </header>
-  <main class="mb-auto py-12">
+  <main class="mb-auto py-8 lg:py-12">
     {{ content | safe }}
   </main>
   <footer>
-    <div class="mt-16 mb-8 text-sm font-medium">
+    <div class="mt-12 lg:mt-16 mb-8 text-sm font-medium">
       <div class="flex mb-3 space-x-4 justify-center">
         <a class="text-gray-700" href="https://github.com/wirgen" rel="nofollow" target="_blank">
           <span class="sr-only">github</span>
@@ -77,5 +110,24 @@
     </div>
   </footer>
 </div>
+<script type="text/javascript">
+  const openMenu = document.getElementById('openMenu')
+  const closeMenu = document.getElementById('closeMenu')
+  const mobileMenu = document.getElementById('mobileMenu')
+
+  openMenu.addEventListener('click', () => {
+    document.body.style.overflow = 'hidden'
+    mobileMenu.classList.remove('translate-x-full')
+    openMenu.classList.add('hidden')
+    closeMenu.classList.remove('hidden')
+  })
+
+  closeMenu.addEventListener('click', () => {
+    document.body.style.overflow = 'auto'
+    mobileMenu.classList.add('translate-x-full')
+    openMenu.classList.remove('hidden')
+    closeMenu.classList.add('hidden')
+  })
+</script>
 </body>
 </html>
