--- a/tags.njk
+++ b/tags.njk
@@ -4,11 +4,11 @@ eleventyNavigation:
   key: Теги
   order: 1
 ---
-<div class="mx-48 min-h-screen/2 flex items-center">
-  <div class="mr-8 py-4 pr-8 border-r-4">
-    <h1 class="text-4xl font-extrabold leading-normal">Теги</h1>
+<div class="lg:mx-24 xl:mx-48 min-h-screen/2 md:flex items-center">
+  <div class="mb-4 md:mb-0 md:mr-8 md:py-4 md:pr-8 md:border-r-4">
+    <h1 class="text-2xl md:text-3xl lg:text-4xl font-extrabold leading-normal">Теги</h1>
   </div>
-  <ul class="flex-grow flex flex-wrap font-medium">
+  <ul class="mt-12 flex-grow flex flex-wrap font-medium">
     {% for tag, count in collections.tagList %}
       {% set tagUrl %}/tags/{{ tag | slug }}/{% endset %}
       <li class="my-2 mr-5">
