Add Google Analytics

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -110,6 +110,15 @@
     </div>
   </footer>
 </div>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q7TT3J42NB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Q7TT3J42NB');
+</script>
 <script type="text/javascript">
   const openMenu = document.getElementById('openMenu')
   const closeMenu = document.getElementById('closeMenu')
