--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -7,7 +7,11 @@
   <meta name="google-site-verification" content="NHN57aUkNjWIGlM2JFBfgtnvtUhmDccWyNaVWuoxnkw" />
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap">
+  <link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap">
+  <noscript>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap">
+  </noscript>
   <link rel="icon" type="image/svg" href="{{ '/img/logo.svg' | url }}">
   <link rel="stylesheet" href="{{ '/css/style.css' | url }}">
   <link rel="stylesheet" href="{{ '/css/prism-darcula.css' | url }}">
@@ -19,7 +23,7 @@
     class="sm:max-w-xl md:max-w-2xl lg:max-w-4xl xl:max-w-5xl mx-auto px-6 sm:px-0 flex flex-col justify-between h-screen">
   <header class="py-7 flex justify-between items-center">
     <div class="flex">
-      <img class="mr-3 w-8 h-8 text-primary-500" src="/img/logo.svg">
+      <img class="mr-3 text-primary-500" width="32" height="32" src="/img/logo.svg">
       <a class="text-2xl font-bold text-gray-700" href="{{ '/' | url }}">{{ metadata.title }}</a>
     </div>
     <nav class="hidden sm:block text-lg font-medium">
