--- a/_includes/post.njk
+++ b/_includes/post.njk
@@ -2,7 +2,7 @@
 layout: layouts/base.njk
 ---
 <article>
-  <div class="font-medium text-gray-400 text-center">
+  <div class="font-medium text-gray-500 text-center">
     <time datetime="{{ page.date | htmlDateString }}">{{ page.date | readableDate }}</time>
   </div>
   <h1 class="pb-8 text-2xl md:text-3xl lg:text-4xl font-extrabold leading-normal text-center border-b">
@@ -19,7 +19,7 @@ layout: layouts/base.njk
             {%- if links[0] != link %}
               <div>•</div>
             {%- endif %}
-            <a class="text-gray-700" href="{{ link.link | url }}" rel="nofollow" target="_blank">
+            <a class="text-gray-700" href="{{ link.link | url }}" rel="nofollow noopener" target="_blank">
               {{ link.title }}
             </a>
           {%- endfor %}
@@ -27,18 +27,18 @@ layout: layouts/base.njk
       {%- endif %}
     </div>
     <div class="lg:pr-8 lg:w-1/4 mb-8 lg:mb-0 divide-y border-b lg:border-b-0">
-      <div class="pb-8">
+      <div class="pb-6">
         <h3 class="my-0 text-sm font-medium text-gray-500 uppercase">Теги</h3>
         <ul class="flex flex-wrap items-center text-sm font-medium leading-6 md:leading-7 lg:leading-8">
           {%- for tag in tags | filterTagList -%}
             {%- set tagUrl %}/tags/{{ tag | slug }}/{% endset -%}
-            <li class="block mr-3">
+            <li class="block mr-3 mb-2">
               <a class="px-1.5 py-1 bg-primary-50 uppercase" href="{{ tagUrl | url }}">{{ tag }}</a>
             </li>
           {%- endfor %}
         </ul>
       </div>
-      <div class="hidden lg:block py-8 space-y-8">
+      <div class="hidden lg:block py-8 space-y-8 leading-normal">
         {%- if collections.posts %}
           {%- set nextPost = collections.posts | getNextCollectionItem(page) %}
           {%- set previousPost = collections.posts | getPreviousCollectionItem(page) %}
