--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -7,8 +7,9 @@
   <meta name="description" content="{{ description or metadata.description }}">
   <meta name="google-site-verification" content="NHN57aUkNjWIGlM2JFBfgtnvtUhmDccWyNaVWuoxnkw" />
   <link rel="icon" type="image/svg" href="{{ '/img/logo.svg' | url }}">
-  <link rel="stylesheet" href="{{ '/css/style.css' | url }}" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="{{ '/css/prism-darcula.css' | url }}" media="print" onload="this.media='all'">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="{{ '/css/style.css' | url }}">
+  <link rel="stylesheet" href="{{ '/css/prism-darcula.css' | url }}">
   <link rel="alternate" href="{{ metadata.feed.path | url }}" type="application/atom+xml" title="{{ metadata.title }}">
   <link rel="alternate" href="{{ metadata.jsonfeed.path | url }}" type="application/json" title="{{ metadata.title }}">
 </head>
